# hydro-visualization

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  app.py  client.py  conf.py  contract.py  data_management.py  docker-compose.yaml  hydro-vis-params-json-schema.json  hydro-vis-request-json-schema.json  install_hydro_grpc.sh  jenkinsfile.disable.groovy  jenkinsfile.groovy  jenkinsfile.old.groovy  openapi.yaml  pyproject.toml  rename_file.py  requirements.txt  run.py  sample_response.json  start.sh  type_conversions.py  version.json  visualizer.py
.github/: dependabot.yml
.github/workflows/: ci.yaml  docker-ci.yaml  release.yaml
app/: app.py  grpc_app.py
app/ml_transformers/: autoembeddings.py  metrics.py  transformer.py
app/transformation_tasks/: tasks.py
app/utils/: conf.py  data_management.py  logging_config.ini  logs.py
demo/PACS/: contract.py  requirements.txt  serving.yaml  utils.py
demo/PACS/src/: func_main.py
demo/adult/: README.md  serving.yaml
demo/adult/demo/: hydroserving_demo.ipynb  simulate_traffic.py  train_classifier_model_and_monitoring_model.ipynb
demo/adult/model/: .gitignore  README.md  classification_model.joblib.dvc  serving.yaml
demo/adult/monitoring_model/: .gitignore  README.md  monitoring_model.joblib.dvc  serving.yaml
demo/embs/: serving.yaml
demo/embs/src/: func_main.py
demo/monitoring/: serving.yaml
docs/: developer-documentation.md  user-documentation.md
hydro_viz/: app.py  celery_app.py  grpc_app.py
hydro_viz/ml_transformers/: transformer.py  utils.py
hydro_viz/transformation_tasks/: tasks.py
hydro_viz/utils/: conf.py  data_management.py  s3manager.py
ml_transformers/: autoembeddings.py  metrics.py  transformer.py  utils.py
src/: run.py
src/app/: app.py  grpc_app.py
src/app/transformation_tasks/: tasks.py
src/app/utils/: conf.py  hydro-vis-request-json-schema.json
test/adult/: README.md  serving.yaml  test.py  test.sh
transformation_tasks/: __init__.py  tasks.py
utils/: data_management.py
vis_tests/: generators.py
(+14 files in other folders)
