[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "visualization"
version = "2.2.0"

[tool.poetry.dependencies]
Flask = "1.1.1"
Pillow = "7.1.2"
PyYAML = "5.3.1"
boto3 = "1.12.34"
celery = {version = "4.4.0rc3", extras = ["mongodb"]}
flask_cors = "3.0"
gevent = "^20.9.0"
gitpython = "2.1"
grpcio = "^1.28.1"
grpcio-health-checking = "^1.28.1"
# hydro-serving-grpc = "^2.4.0-rc1"
hydrosdk = "2.4.0"
joblib = "0.14.1"
jsonschema = "3.2.0"
msid = {git = "https://github.com/xgfs/msid.git", rev = "292de7cf378a544209e3f146ae3bb8b7900b9e77"}
numpy = "1.18.3"
pandas = "1.0.3"
pymongo = " 3.10.1"
python = "~3.8.9"
requests = "^2.23.0"
s3fs = "0.4.2"
scikit-learn = "0.22.2.post1"
tqdm = "4.45.0"
umap-learn = "0.4.5"
waitress = "1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
