[tool.poetry]
name = "hydro_viz"
version = "3.0.3"
description = "Service for visualization of high dimensional for hydrosphere"
authors = ["hydrosphere.io"]
license = "Apache-2.0"

[tool.poetry.dependencies]
boto3 = "1.12.34"
celery = {version = "5.1.2", extras = ["mongodb"]}
Flask = "1.1.1"
flask_cors = "3.0"
gitpython = "~2.1"
grpcio-health-checking = "1.28.1"
gevent = "~20.9.0"
pandas ="1.1.5"
Pillow = "7.1.2"
python = "~3.8.9"
pymongo = "^3.12.0"
PyYAML = "^5.4.1"
scikit-learn = "0.24.2"
hydrosdk = "3.0.3"
msid = {git = "https://github.com/xgfs/msid.git", rev = "292de7cf378a544209e3f146ae3bb8b7900b9e77"}
numpy = "1.18.3"
requests = "~2.23.0"
s3fs = "0.4.2"
tqdm = "4.45.0"
joblib = "0.14.1"
jsonschema = "3.2.0"
umap-learn = "0.5.1"
waitress = "2.1.1"
click = "7.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
flake8-import-order = "^0.18.1"
flake8-black = "^0.2.3"
black = "^21.7b0"
isort = "^5.9.2"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
